Made the side more retro!

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,13 +16,12 @@
 
 	<style>
 	  body {
-          padding: 1rem;
-          max-width: 760px;
+          padding: 2.5rem;
+          max-width: 1900px;
           background: white;
 		  font-family: sans-serif;
           line-height: 1.35rem;
 		  font-size: 16px;
-		  margin: 0 auto;
 	  }
 
 	  hr {
@@ -47,7 +46,6 @@
 
 	  table {
           max-width: 100%;
-		  width: 100%;
           border-collapse: separate;
           border-spacing: 2px;
           border: 1px solid black;
@@ -120,7 +118,7 @@
 	  header {
 		  display: flex;
 		  flex-direction: row;
-		  gap: 3rem;
+		  gap: 6rem;
 	  }
 	  
       nav {
@@ -129,7 +127,7 @@
 	  }
 
 	  nav.main {
-		  flex-grow: 1;
+		  /* flex-grow: 1; */
 	  }
 
 	  .pstatus-orange {
