--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 
 {{ define "add-navigation" }}
 <nav class="additional">
-  <a href="#current">current</a>
-  <a href="#posts">posts</a>
-  <a href="#notes">notes</a>
-  <a href="#sideprojects">side projects</a>
+  <a href="#current">Current</a>
+  <a href="#posts">Posts</a>
+  <a href="#notes">Notes</a>
+  <a href="#sideprojects">Side projects</a>
 </nav>
 {{ end }}
 
