--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 	  <style>
       :root {
         --border-color: gainsboro;
+        --border-size: 2px;
+        --link-color: blue;
       }
 
 	    body {
@@ -28,12 +30,13 @@
 	    }
 
 	    hr {
+        border: 0;
+        border-bottom: var(--border-size) solid var(--border-color);
 		    margin-block-start: 1.5rem;
-        border: 1px solid var(--border-color);
 	    }
 
       a {
-        color: blue;
+        color: var(--link-color);
         text-decoration: none;
       }
 
@@ -59,17 +62,17 @@
 
       table {
         max-width: 100%;
-        border: 2px solid var(--border-color);
+        border: var(--border-size) solid var(--border-color);
         border-collapse: separate;
         border-spacing: 0;
 	    }
 
       table thead tr th {
-        border-bottom: 2px solid var(--border-color);
+        border-bottom: var(--border-size) solid var(--border-color);
       }
 
       table th, table td {
-        padding: 0.3em 0.5em;
+        padding: 0.5em 0.8em;
       }
 
 	    ul.list li {
@@ -84,7 +87,7 @@
         text-wrap: nowrap;
         overflow-x: auto;
 		    padding: 0 1em;
-		    border: 2px solid var(--border-color);
+		    border: var(--border-size) solid var(--border-color);
 	    }
 
 	    code {
