--- a/templates/base.html
+++ b/templates/base.html
@@ -127,6 +127,10 @@
         gap: 0.9rem;
 	    }
 
+      audio::-webkit-media-controls-enclosure {
+        border-radius: 0;
+      }
+
 	    @media only screen and (max-width: 600px) {
 		    body {
 			    padding: 0.5em;
