--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
         --border-color: gainsboro;
         --border-size: 2px;
         --link-color: blue;
+        --bg-color: #eee;
       }
 
 	    body {
@@ -94,10 +95,12 @@
 		    padding: 0 3px;
 		    font-size: 14px;
 		    border: 0;
+        background: var(--bg-color);
 	    }
 
 	    pre code {
 		    line-height: 1.3em;
+        background: white;
 	    }
 
 	    pre, code, pre *, code * {
