--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,7 @@
 
       table thead tr th {
         border-bottom: var(--border-size) solid var(--border-color);
+        text-align: left;
       }
 
       table th, table td {
