--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,21 @@
         --bg-color: #eee;
       }
 
+      *::selection {
+        background: var(--link-color);
+        color: #ffffff;
+      }
+
+      *::-moz-selection {
+        background: var(--link-color);
+        color: #ffffff;
+      }
+
+      *::-webkit-selection {
+        background: var(--link-color);
+        color: #ffffff;
+      }
+
 	    body {
         padding: 2.5rem;
         max-width: 1900px;
