--- a/templates/base.html
+++ b/templates/base.html
@@ -129,15 +129,15 @@
 		    margin-inline-end: 0;
 	    }
 
-      figure img {
-      }
-
 	    figcaption {
+        width: 800px;
+		    max-width: 100%;
 		    text-align: center;
 	    }
 
 	    figcaption p {
-		    margin: 0.3em 0 0 0;
+		    margin: 0.3em 0 1.5em 0;
+        font-style: italic;
 	    }
 
 	    img, video, audio {
