--- a/templates/base.html
+++ b/templates/base.html
@@ -183,7 +183,7 @@
   <body>
 
 	  <header>
-	    <nav class="main" itemscope itemtype="http://schema.org/SiteNavigationElement" role="toolbar">
+	    <nav class="main" itemscope itemtype="http://schema.org/SiteNavigationElement" role="navigation" aria-label="Main navigation">
 		    <a href="/">Home</a>
         <a href="/#posts">Posts</a>
         <a href="/#notes">Notes</a>
