--- a/templates/base.html
+++ b/templates/base.html
@@ -177,6 +177,10 @@
 		    a {
 			    word-wrap: break-word;
 		    }
+
+        img, video, audio {
+          padding: 0em;
+	      }
 	    }
 	  </style>
   </head>
