Updated webring script

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -3,20 +3,20 @@
         <a href="http://www.landley.net/notes-2023.html#30-10-2023" target="_blank" rel="noopener">October 30, 2023</a>
         —
         <a href="http://www.landley.net/notes-2023.html" target="_blank" rel="noopener">Rob Landley's Blog Thing for 2023</a>
-        <div> Feeling terrible. Very tired. Can't sleep. Still coughing and sneezing and so on. Still drizzle outside, but now it's dropped down to near freezing. Spent 5 minutes outside and wanted gloves. (Which means I don't just have a cold, I have a STEREOTYPICAL cold. Of the "wet and drizzly somehow inexplicably encourage viruses" kind. Next up I'll have joint aches...</div>
+        <div> Feeling terrible. Very tired. Can't sleep. Still coughing and sneezing and so on. Still drizzle outside, but now it's dropped down to near freezing. Spent 5 minutes outside and wanted gloves. (Which means I don't just have a cold, I have a STEREOTYPICAL cold. Of the "wet and drizzly somehow inexplicably encourage viru...</div>
       </li>
       <li>
         <a href="https://drewdevault.com/2023/10/31/On-real-names.html" target="_blank" rel="noopener">On &#34;real name&#34; policies</a>
         —
         <a href="https://drewdevault.com" target="_blank" rel="noopener">Drew DeVault's blog</a>
-        <div>Some free software projects reject anonymous or pseudonymous contributions, requiring you to author patches using your &ldquo;real name&rdquo;. Such projects have a so-called &ldquo;real name&rdquo; policy; Linux is one well-known example.1 The root motivations behind such policies vary, but in my experience the most often cited rationale is that it&rsquo;s ...</div>
+        <div>Some free software projects reject anonymous or pseudonymous contributions, requiring you to author patches using your &ldquo;real name&rdquo;. Such projects have a so-called &ldquo;real name&rdquo; policy; Linux is one well-known example.1 The root motivations behind such policies vary, but in my experience the most o...</div>
       </li>
       <li>
         <a href="http://offbeatpursuit.com:80/blog/?id=25" target="_blank" rel="noopener">A fix by any other name</a>
         —
         <a href="<title>WLOG - blog</title>
 <link>http://offbeatpursuit.com:80/blog/" target="_blank" rel="noopener">WLOG - blog</a>
-        <div>tags: i2c, plan9 Another month, another file system. Well, if you can’t fix it in software, fix it in hardware (looking at you, bme680, we’re not done yet). The show must go on, as they say, and I would like my experiments to go on. So a “new” addition to the environmental sensor family connected to the humble “server”: sgp30. I say “new” because it was new ...</div>
+        <div>tags: i2c, plan9 Another month, another file system. Well, if you can’t fix it in software, fix it in hardware (looking at you, bme680, we’re not done yet). The show must go on, as they say, and I would like my experiments to go on. So a “new” addition to the environmental sensor family connected to the humble “server”...</div>
       </li>
       <li>
         <a href="https://mirzapandzo.com/next-image-url-parameter-is-valid-but-upstream-response-is-invalid" target="_blank" rel="noopener">Next/Image &quot;url&quot; parameter is valid but upstream response is invalid</a>
@@ -40,13 +40,13 @@
         <a href="https://michael.stapelberg.ch/posts/2023-10-25-my-all-flash-zfs-network-storage-build/" target="_blank" rel="noopener">My 2023 all-flash ZFS NAS (Network Storage) build</a>
         —
         <a href="https://michael.stapelberg.ch/feed.xml" target="_blank" rel="noopener">Michael Stapelbergs Website</a>
-        <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage devices primarily for archival (daily backups)...</div>
+        <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <a href="https://utcc.utoronto.ca/~cks/space/blog/web/RealHTMLCanGetABitCrazy" target="_blank" rel="noopener">Real (email) HTML can get a bit extreme</a>
+        <a href="https://utcc.utoronto.ca/~cks/space/blog/tech/FirewallsAndMACs" target="_blank" rel="noopener">Network firewalls and Ethernet addresses</a>
         —
         <a href="https://utcc.utoronto.ca/~cks/space/blog/" target="_blank" rel="noopener">Chris&#39;s Wiki :: blog</a>
-        <div>Over on the Fediverse, I noted a discovery I'd made recently: It turns out that if you nest a couple hundred &lt;div>s inside each other before you get to the actual content text, GNU Emacs shr (its simple HTML renderer) can't cope with the result and gives you no content. Guess what some HTML-capable email clients do (possibly after the email is repeatedly ...</div>
+        <div>Over on the Fediverse I mentioned that on some networks we authorize machines by controlling what Ethernet addresses ('MACs') get what IP addresses. In response, I was asked a very good question about why not have the firewall work by Ethernet address instead of IP. A starting answer is that firewalls have traditionall...</div>
       </li>
       <li>
         <a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a>
