Added ffmpeg note

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -43,10 +43,10 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <a href="https://utcc.utoronto.ca/~cks/space/blog/tech/FirewallsAndMACs" target="_blank" rel="noopener">Network firewalls and Ethernet addresses</a>
+        <a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/OurVaryingPhysicalSecurityLevels" target="_blank" rel="noopener">Our varying levels of what you could charitably call &#39;physical security&#39;</a>
         —
         <a href="https://utcc.utoronto.ca/~cks/space/blog/" target="_blank" rel="noopener">Chris&#39;s Wiki :: blog</a>
-        <div>Over on the Fediverse I mentioned that on some networks we authorize machines by controlling what Ethernet addresses ('MACs') get what IP addresses. In response, I was asked a very good question about why not have the firewall work by Ethernet address instead of IP. A starting answer is that firewalls have traditionall...</div>
+        <div>As I mentioned way back when I discussed how rogue wireless access points are a bigger risk at universities, one of the unusual things about universities is that we usually don't have anywhere near as much physical security as, say, a typical company does. This is because in practice most university buildings are open ...</div>
       </li>
       <li>
         <a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a>
