Added new RSS feed to webring

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -1,5 +1,11 @@
   <h2>Posts from blogs I follow around the net</h2>
   <ul>      <li>
+        <a href="https://blog.regehr.org/archives/2485" target="_blank" rel="noopener">Why Do Peephole Optimizations Work?</a>
+        —
+        <a href="<link>https://blog.regehr.org" target="_blank" rel="noopener">Embedded in Academia</a>
+        <div>In its original form, a peephole optimization applied to a collection of instructions located close together in a program. For example, in a register transfer language we might find this sequence of instructions: r0 = xor r8, -1 r1 = xor r9, -1 r0 = and r0, r1 Here, assuming the two’s complement representation, -1 […]</div>
+      </li>
+      <li>
         <a href="http://www.landley.net/notes-2023.html#30-10-2023" target="_blank" rel="noopener">October 30, 2023</a>
         —
         <a href="http://www.landley.net/notes-2023.html" target="_blank" rel="noopener">Rob Landley's Blog Thing for 2023</a>
@@ -43,10 +49,10 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <a href="https://utcc.utoronto.ca/~cks/space/blog/sysadmin/OurVaryingPhysicalSecurityLevels" target="_blank" rel="noopener">Our varying levels of what you could charitably call &#39;physical security&#39;</a>
+        <a href="https://utcc.utoronto.ca/~cks/space/blog/spam/DKIMHeaderSigningMeaning" target="_blank" rel="noopener">The various meanings of DKIM signing message headers</a>
         —
         <a href="https://utcc.utoronto.ca/~cks/space/blog/" target="_blank" rel="noopener">Chris&#39;s Wiki :: blog</a>
-        <div>As I mentioned way back when I discussed how rogue wireless access points are a bigger risk at universities, one of the unusual things about universities is that we usually don't have anywhere near as much physical security as, say, a typical company does. This is because in practice most university buildings are open ...</div>
+        <div>When I talked about the issue of what headers to include in email DKIM signatures, I didn't really cover the specifics of how you DKIM sign email headers and what the various options mean. The specifics can matter, especially since they help you (me) understand and navigate through the options that mailers (such as Exi...</div>
       </li>
       <li>
         <a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a>
