Removed Landley from webring

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -6,10 +6,10 @@
         <div>In its original form, a peephole optimization applied to a collection of instructions located close together in a program. For example, in a register transfer language we might find this sequence of instructions: r0 = xor r8, -1 r1 = xor r9, -1 r0 = and r0, r1 Here, assuming the two’s complement representation, -1 […]</div>
       </li>
       <li>
-        <a href="http://www.landley.net/notes-2023.html#30-10-2023" target="_blank" rel="noopener">October 30, 2023</a>
+        <a href="https://www.neilhenning.dev/posts/how-long-to-compile-llvm-17-on-rpi/" target="_blank" rel="noopener">How long does it take to compile LLVM 17 on a Raspberry PI 4</a>
         —
-        <a href="http://www.landley.net/notes-2023.html" target="_blank" rel="noopener">Rob Landley's Blog Thing for 2023</a>
-        <div> Feeling terrible. Very tired. Can't sleep. Still coughing and sneezing and so on. Still drizzle outside, but now it's dropped down to near freezing. Spent 5 minutes outside and wanted gloves. (Which means I don't just have a cold, I have a STEREOTYPICAL cold. Of the "wet and drizzly somehow inexplicably encourage viru...</div>
+        <a href="https://www.neilhenning.dev/" target="_blank" rel="noopener">Neil Henning</a>
+        <div>With the imminent launch of the Raspberry Pi 5 I wondered - how long does it take to compile the latest LLVM release (17 at the time of writing this blog) on the Raspberry Pi 4. This will give me a baseline that I can test the Raspberry Pi 5 against once I get ahold of it. For my initial exploration I decided to test j...</div>
       </li>
       <li>
         <a href="https://drewdevault.com/2023/10/31/On-real-names.html" target="_blank" rel="noopener">On &#34;real name&#34; policies</a>
