Fixed webring website links

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -2,7 +2,7 @@
   <ul>      <li>
         <a href="https://blog.regehr.org/archives/2485" target="_blank" rel="noopener">Why Do Peephole Optimizations Work?</a>
         —
-        <a href="<link>https://blog.regehr.org" target="_blank" rel="noopener">Embedded in Academia</a>
+        <a href="https://blog.regehr.org" target="_blank" rel="noopener">Embedded in Academia</a>
         <div>In its original form, a peephole optimization applied to a collection of instructions located close together in a program. For example, in a register transfer language we might find this sequence of instructions: r0 = xor r8, -1 r1 = xor r9, -1 r0 = and r0, r1 Here, assuming the two’s complement representation, -1 […]</div>
       </li>
       <li>
@@ -18,11 +18,11 @@
         <div>Some free software projects reject anonymous or pseudonymous contributions, requiring you to author patches using your &ldquo;real name&rdquo;. Such projects have a so-called &ldquo;real name&rdquo; policy; Linux is one well-known example.1 The root motivations behind such policies vary, but in my experience the most o...</div>
       </li>
       <li>
-        <a href="http://offbeatpursuit.com:80/blog/?id=25" target="_blank" rel="noopener">A fix by any other name</a>
+        <a href="http://offbeatpursuit.com:80/blog/?id=26" target="_blank" rel="noopener">Learning all the wrong lessons</a>
         —
-        <a href="<title>WLOG - blog</title>
-<link>http://offbeatpursuit.com:80/blog/" target="_blank" rel="noopener">WLOG - blog</a>
-        <div>tags: i2c, plan9 Another month, another file system. Well, if you can’t fix it in software, fix it in hardware (looking at you, bme680, we’re not done yet). The show must go on, as they say, and I would like my experiments to go on. So a “new” addition to the environmental sensor family connected to the humble “server”...</div>
+        <a href="WLOG - blog
+http://offbeatpursuit.com:80/blog/" target="_blank" rel="noopener">WLOG - blog</a>
+        <div>tags: random, zig The time when some thought should be given to something other than just random projects is approaching. For whom does the sysbell rings? So why not sharpen the brain with a simple exercise? A “cold open” so to speak. A quick “hello” run through the current popular (and STRONGLY recommended) system pro...</div>
       </li>
       <li>
         <a href="https://mirzapandzo.com/next-image-url-parameter-is-valid-but-upstream-response-is-invalid" target="_blank" rel="noopener">Next/Image &quot;url&quot; parameter is valid but upstream response is invalid</a>
