Fixed webring website links

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -1,63 +1,42 @@
   <h2>Posts from blogs I follow around the net</h2>
   <ul>      <li>
-        <a href="https://blog.regehr.org/archives/2485" target="_blank" rel="noopener">Why Do Peephole Optimizations Work?</a>
-        —
-        <a href="https://blog.regehr.org" target="_blank" rel="noopener">Embedded in Academia</a>
+        <div><a href="https://blog.regehr.org/archives/2485" target="_blank" rel="noopener">Why Do Peephole Optimizations Work?</a> — Embedded in Academia</div>
         <div>In its original form, a peephole optimization applied to a collection of instructions located close together in a program. For example, in a register transfer language we might find this sequence of instructions: r0 = xor r8, -1 r1 = xor r9, -1 r0 = and r0, r1 Here, assuming the two’s complement representation, -1 […]</div>
       </li>
       <li>
-        <a href="https://www.neilhenning.dev/posts/how-long-to-compile-llvm-17-on-rpi/" target="_blank" rel="noopener">How long does it take to compile LLVM 17 on a Raspberry PI 4</a>
-        —
-        <a href="https://www.neilhenning.dev/" target="_blank" rel="noopener">Neil Henning</a>
+        <div><a href="https://www.neilhenning.dev/posts/how-long-to-compile-llvm-17-on-rpi/" target="_blank" rel="noopener">How long does it take to compile LLVM 17 on a Raspberry PI 4</a> — Neil Henning</div>
         <div>With the imminent launch of the Raspberry Pi 5 I wondered - how long does it take to compile the latest LLVM release (17 at the time of writing this blog) on the Raspberry Pi 4. This will give me a baseline that I can test the Raspberry Pi 5 against once I get ahold of it. For my initial exploration I decided to test j...</div>
       </li>
       <li>
-        <a href="https://drewdevault.com/2023/10/31/On-real-names.html" target="_blank" rel="noopener">On &#34;real name&#34; policies</a>
-        —
-        <a href="https://drewdevault.com" target="_blank" rel="noopener">Drew DeVault's blog</a>
+        <div><a href="https://drewdevault.com/2023/10/31/On-real-names.html" target="_blank" rel="noopener">On &#34;real name&#34; policies</a> — Drew DeVault's blog</div>
         <div>Some free software projects reject anonymous or pseudonymous contributions, requiring you to author patches using your &ldquo;real name&rdquo;. Such projects have a so-called &ldquo;real name&rdquo; policy; Linux is one well-known example.1 The root motivations behind such policies vary, but in my experience the most o...</div>
       </li>
       <li>
-        <a href="http://offbeatpursuit.com:80/blog/?id=26" target="_blank" rel="noopener">Learning all the wrong lessons</a>
-        —
-        <a href="WLOG - blog
-http://offbeatpursuit.com:80/blog/" target="_blank" rel="noopener">WLOG - blog</a>
+        <div><a href="http://offbeatpursuit.com:80/blog/?id=26" target="_blank" rel="noopener">Learning all the wrong lessons</a> — WLOG - blog</div>
         <div>tags: random, zig The time when some thought should be given to something other than just random projects is approaching. For whom does the sysbell rings? So why not sharpen the brain with a simple exercise? A “cold open” so to speak. A quick “hello” run through the current popular (and STRONGLY recommended) system pro...</div>
       </li>
       <li>
-        <a href="https://mirzapandzo.com/next-image-url-parameter-is-valid-but-upstream-response-is-invalid" target="_blank" rel="noopener">Next/Image &quot;url&quot; parameter is valid but upstream response is invalid</a>
-        —
-        <a href="https://mirzapandzo.com/" target="_blank" rel="noopener">Mirza Pandzo&apos;s Blog</a>
+        <div><a href="https://mirzapandzo.com/next-image-url-parameter-is-valid-but-upstream-response-is-invalid" target="_blank" rel="noopener">Next/Image &quot;url&quot; parameter is valid but upstream response is invalid</a> — Mirza Pandzo&apos;s Blog</div>
         <div>Getting "url" parameter is valid but upstream response is invalid error with Next/Image on WSL2</div>
       </li>
       <li>
-        <a href="https://journal.valeriansaliou.name/deploy-a-nomad-cluster-on-alpine-linux-with-vultr/" target="_blank" rel="noopener">Deploy a Nomad Cluster on Alpine Linux with Vultr</a>
-        —
-        <a href="https://journal.valeriansaliou.name/" target="_blank" rel="noopener">Valerian Saliou</a>
+        <div><a href="https://journal.valeriansaliou.name/deploy-a-nomad-cluster-on-alpine-linux-with-vultr/" target="_blank" rel="noopener">Deploy a Nomad Cluster on Alpine Linux with Vultr</a> — Valerian Saliou</div>
         <div>After spending countless hours trying to understand how to deploy my apps on Kubernetes for the first time to host Mirage, an AI API service that I run, I ended up making myself a promise that the next app I work on would be using a more productive & simpler</div>
       </li>
       <li>
-        <a href="https://neil.computer/notes/chart-of-accounts-for-startups-and-saas-companies/" target="_blank" rel="noopener">Chart of Accounts for Startups and SaaS Companies</a>
-        —
-        <a href="https://neil.computer/" target="_blank" rel="noopener">Neil Panchal</a>
+        <div><a href="https://neil.computer/notes/chart-of-accounts-for-startups-and-saas-companies/" target="_blank" rel="noopener">Chart of Accounts for Startups and SaaS Companies</a> — Neil Panchal</div>
         <div>Accounting is fundamental to starting a business. You need to have a basic understanding of accounting principles and essential bookkeeping. I had to learn it. There was no choice. For filing taxes, your CPA is going to ask you for an Income Statement (also known as P/L statement). If</div>
       </li>
       <li>
-        <a href="https://michael.stapelberg.ch/posts/2023-10-25-my-all-flash-zfs-network-storage-build/" target="_blank" rel="noopener">My 2023 all-flash ZFS NAS (Network Storage) build</a>
-        —
-        <a href="https://michael.stapelberg.ch/feed.xml" target="_blank" rel="noopener">Michael Stapelbergs Website</a>
+        <div><a href="https://michael.stapelberg.ch/posts/2023-10-25-my-all-flash-zfs-network-storage-build/" target="_blank" rel="noopener">My 2023 all-flash ZFS NAS (Network Storage) build</a> — Michael Stapelbergs Website</div>
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <a href="https://utcc.utoronto.ca/~cks/space/blog/spam/DKIMHeaderSigningMeaning" target="_blank" rel="noopener">The various meanings of DKIM signing message headers</a>
-        —
-        <a href="https://utcc.utoronto.ca/~cks/space/blog/" target="_blank" rel="noopener">Chris&#39;s Wiki :: blog</a>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/spam/DKIMHeaderSigningMeaning" target="_blank" rel="noopener">The various meanings of DKIM signing message headers</a> — Chris&#39;s Wiki :: blog</div>
         <div>When I talked about the issue of what headers to include in email DKIM signatures, I didn't really cover the specifics of how you DKIM sign email headers and what the various options mean. The specifics can matter, especially since they help you (me) understand and navigate through the options that mailers (such as Exi...</div>
       </li>
       <li>
-        <a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a>
-        —
-        <a href="http://github.com/dylang/node-rss" target="_blank" rel="noopener">Szymon Kaliski</a>
+        <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
         <div>This article documents my learnings from designing and building a DIY Pen Plotter during the summer of 2023. My ultimate goal is to build my…</div>
       </li>
 </ul>
