Fixed email in CV

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/spam/DKIMHeaderSigningMeaning" target="_blank" rel="noopener">The various meanings of DKIM signing message headers</a> — Chris&#39;s Wiki :: blog</div>
-        <div>When I talked about the issue of what headers to include in email DKIM signatures, I didn't really cover the specifics of how you DKIM sign email headers and what the various options mean. The specifics can matter, especially since they help you (me) understand and navigate through the options that mailers (such as Exi...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/unix/VimFeaturesThatHookedMe" target="_blank" rel="noopener">The Vim features that make me a Vim user instead of a Vi user</a> — Chris&#39;s Wiki :: blog</div>
+        <div>Over on the Fediverse there was a little Vim versus Vi discussion, and in response to seeing it I posted something: I used to be a minimal vi user. Over the years I've drifted to being a not so minimal vim user, and I think the vim features that I'm now addicted to are: infinite undo and redo (and a tree view of undo) ...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
