Updated VIM sane defaults

--- a/_includes/webring.html
+++ b/_includes/webring.html
@@ -8,8 +8,8 @@
         <div>With the imminent launch of the Raspberry Pi 5 I wondered - how long does it take to compile the latest LLVM release (17 at the time of writing this blog) on the Raspberry Pi 4. This will give me a baseline that I can test the Raspberry Pi 5 against once I get ahold of it. For my initial exploration I decided to test j...</div>
       </li>
       <li>
-        <div><a href="https://drewdevault.com/2023/10/31/On-real-names.html" target="_blank" rel="noopener">On &#34;real name&#34; policies</a> — Drew DeVault's blog</div>
-        <div>Some free software projects reject anonymous or pseudonymous contributions, requiring you to author patches using your &ldquo;real name&rdquo;. Such projects have a so-called &ldquo;real name&rdquo; policy; Linux is one well-known example.1 The root motivations behind such policies vary, but in my experience the most o...</div>
+        <div><a href="https://drewdevault.com/2023/11/09/Can-I-be-on-your-podcast.html" target="_blank" rel="noopener">Can I be on your podcast?</a> — Drew DeVault's blog</div>
+        <div>I am working on rousing the Hare community to get the word out about our work. I have drafted the Hare evangelism guidelines to this effect, which summarizes how we want to see our community bringing Hare to more people. We&rsquo;d like to spread the word in a way which is respectful of the attention of others &ndash; ...</div>
       </li>
       <li>
         <div><a href="http://offbeatpursuit.com:80/blog/?id=26" target="_blank" rel="noopener">Learning all the wrong lessons</a> — WLOG - blog</div>
@@ -32,8 +32,8 @@
         <div>For over 10 years now, I run two self-built NAS (Network Storage) devices which serve media (currently via Jellyfin) and run daily backups of all my PCs and servers. In this article, I describe my goals, which hardware I picked for my new build (and why) and how I set it up. Design Goals I use my network storage device...</div>
       </li>
       <li>
-        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/unix/VimFeaturesThatHookedMe" target="_blank" rel="noopener">The Vim features that make me a Vim user instead of a Vi user</a> — Chris&#39;s Wiki :: blog</div>
-        <div>Over on the Fediverse there was a little Vim versus Vi discussion, and in response to seeing it I posted something: I used to be a minimal vi user. Over the years I've drifted to being a not so minimal vim user, and I think the vim features that I'm now addicted to are: infinite undo and redo (and a tree view of undo) ...</div>
+        <div><a href="https://utcc.utoronto.ca/~cks/space/blog/tech/BackupSystemsStorageFormatDivide" target="_blank" rel="noopener">Backup systems and how much they do or don&#39;t know about storage formats</a> — Chris&#39;s Wiki :: blog</div>
+        <div>One of the divides in large scale systems for handling backups is whether they have their own custom storage format (or formats) for backups, or whether they rely on outside tools to create what I'll call 'backup blobs' that the backup system then manages. This division is fractal, because sometimes what you're backing...</div>
       </li>
       <li>
         <div><a href="https://szymonkaliski.com/writing/2023-10-02-building-a-diy-pen-plotter/" target="_blank" rel="noopener">Building a DIY Pen Plotter</a> — Szymon Kaliski</div>
